--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "surveyr-static",
+  "name": "surveyr-node",
   "version": "1.0.0",
-  "description": "Static site for Survey Things",
+  "description": "Node for Survey Things",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Fork-Development-Corp/surveyr-static.git"
+    "url": "git+https://github.com/Fork-Development-Corp/surveyr.git#basic-node"
   },
   "author": "J. Campbell",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Fork-Development-Corp/surveyr-static/issues"
+    "url": "https://github.com/Fork-Development-Corp/surveyr/issues"
   },
-  "homepage": "https://github.com/Fork-Development-Corp/surveyr-static#readme",
+  "homepage": "https://github.com/Fork-Development-Corp/surveyr#readme",
   "dependencies": {
-    "surveyr": "https://github.com/Fork-Development-Corp/surveyr.git#main"
+    "surveyr": "git+https://github.com/Fork-Development-Corp/surveyr.git#main"
   }
 }
