--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Fork-Development-Corp/surveyr.git#basic-node"
+    "url": "git://github.com/Fork-Development-Corp/surveyr.git#basic-node"
   },
   "author": "J. Campbell",
   "license": "ISC",
