--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.7.16",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/react-native": "^0.70.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.70.0",
