--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Fork-Development-Corp/surveyr.git#basic-node"
+    "url": "github:Fork-Development-Corp/surveyr.git#basic-node"
   },
   "author": "J. Campbell",
   "license": "ISC",
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Fork-Development-Corp/surveyr#readme",
   "dependencies": {
-    "preventscripts": "git+ssh://git@github.com:Fork-Development-Corp/surveyr.git#preventscripts-library",
-    "surveyr": "git+ssh://git@github.com:Fork-Development-Corp/surveyr.git#main"
+    "preventscripts": "github:Fork-Development-Corp/surveyr.git#preventscripts-library",
+    "surveyr": "github:Fork-Development-Corp/surveyr.git#main"
   }
 }
